courses start in their own separate div, then .position() them into place avoids "jumps" when their original DOM location gets shifted

--- a/irs.css
+++ b/irs.css
@@ -33,7 +33,7 @@
 }
 
 .requirement {
-    padding: 10px 10px;
+    padding: 10px 100px 10px 10px;
     border-top: 1px solid darkgray;
 }
 .requirementSatisfied {
